update hansen's code
community
community-search-friends
dashboard
dashboard-exercise-finished
dashboard-live-workout
leaderboard
assets/image/dashboard

--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,3 +1,59 @@
-<p>
-  community works!
-</p>
+<ion-content>
+  <app-bg-interfaces></app-bg-interfaces>
+    <div class="title">
+      <br>
+      <div class="header">
+        <div class="h_png">
+            <!-- 这里面放图片 -->
+            <img src="../../assets/image/dashboard/Ellipse 3.svg" alt="" class="img">
+        </div>
+        <div class="ipt">
+            <input type="text" class="iipt">
+        </div>
+    </div>
+
+        <div class="card">
+            <div class="a_title">
+              <b><span class="span1">FRIENDS</span></b>
+            </div>
+           
+            <div class="png_head">
+              <div class="img_h">
+                  <!-- 图片 -->
+              </div>
+              <div class="text_h">
+                  <b><span>Jacob Jones</span></b>
+              </div>
+            </div>
+            
+            <div class="png_head">
+              <div class="img_h">
+                  <!-- 图片 -->
+              </div>
+              <div class="text_h">
+                  <b><span>Jacob Jones</span></b>
+              </div>
+            </div>
+
+            <div class="png_head">
+              <div class="img_h">
+                  <!-- 图片 -->
+              </div>
+              <div class="text_h">
+                  <b><span>Jacob Jones</span></b>
+              </div>
+            </div>
+
+            <div class="png_head">
+              <div class="img_h">
+                  <!-- 图片 -->
+              </div>
+              <div class="text_h">
+                  <b><span>Jacob Jones</span></b>
+              </div>
+            </div>
+        </div>
+
+    </div>
+    <app-navbar></app-navbar>
+</ion-content>
