--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,8 +1,11 @@
+// .imgx{}
+
 .icon11 {
     position: absolute;
 }
 
 .imgx {
+
     width: 100%;
     height: 100%;
     border-radius: 20px;
@@ -43,6 +46,11 @@
     height: 22rem;
     background: white;
     border-radius: 20px;
+}
+.body{
+    width: 100%;
+    height: 844px;
+    // background-color: #cccccc;
 }
 
 .img2 {
