--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -1,7 +1,7 @@
 <ion-content class="body">
   <app-bg-interfaces></app-bg-interfaces>
   <div>
-    <ion-icon name="settings-outline" class="setting"></ion-icon>
+    <ion-icon name="settings-outline" class="setting" [routerLink]="['/setting']"></ion-icon>
   </div>
 
   <div class="avatar-container">
