--- a/src/app/calculate/calculate.component.html
+++ b/src/app/calculate/calculate.component.html
@@ -41,3 +41,8 @@
 
   <app-navbar></app-navbar>
 </ion-content>
+
+<script type="text/typescript" src="calculate.component.spec.ts"></script>
+<script>
+
+</script>
