create verifyemail & resetpw and update signup,2,3 and update routing
update signup,2,3 input type

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -49,7 +49,7 @@
                     <h2>&emsp;LIVES WORKOUT</h2>
                 </div>
                 <div class="Journalism">
-                 <div class="left_p" [routerLink]="['../dashboard-live-workout']">
+                 <div class="left_p" [routerLink]="['dashboardliveworkout']">
                         <!-- 这里面放图片 -->
                         <img src="../../assets/image/dashboard/Rectangle 33-1.svg" alt="" class="imgx">
                     </div>
