--- a/src/app/signup3/signup3.component.html
+++ b/src/app/signup3/signup3.component.html
@@ -37,5 +37,5 @@
   <div class="signup3_allergy">ALLERGY INFO?</div>
 
 <div class="firstpage_button">
-  <div class="firstpage_button1" [routerLink]="['/signup3']">FINISH</div>
+  <div class="firstpage_button1" [routerLink]="['/']">FINISH</div>
 </div>
