--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,19 +14,19 @@
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/email_icon.svg">
             <ion-item>
-            <ion-input placeholder="Email ID"></ion-input>
+            <ion-input type="email" placeholder="Email ID"></ion-input>
             </ion-item>
         </div>
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/username_icon.svg">
             <ion-item>
-            <ion-input placeholder="Username"></ion-input>
+            <ion-input type="username" placeholder="Username"></ion-input>
             </ion-item>
         </div>
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/password_icon.svg">
             <ion-item>
-            <ion-input placeholder="Password"></ion-input>
+            <ion-input type="new-password" placeholder="Password"></ion-input>
             </ion-item>
         </div>
     </div>
