create privacy page

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,3 +1,40 @@
-<ion-content>
+<div class="privacy_body">
+  <div class="privacy_title">Terms & Conditions</div>
+  <div class="privacy_subtitle">Last updated on 1/9/2022</div>
+  <div class="headerline">
+
+  </div>
+</div>
+<ion-content class="content_contanier">
+  <div class="inside_word">
+  <div class="top_all_button">
+    <div class="down_button" (click)="scrollToBottom()">Scroll To Bottom</div>
+  </div>  
+  <h1>1. Clause 1</h1>
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
+      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
+      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
+  <h1>1. Clause 1</h1>
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
+      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
+      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
+  <h1>1. Clause 1</h1>
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
+      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
+      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
+  <h1>1. Clause 1</h1>
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
+      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
+      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
+  <h1>1. Clause 1</h1>
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
+      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
+      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
+    <div class="top_all_button">
+      <div class="accept_button">Accept & Continue</div>
+      <div class="top_button" (click)="scrollToTop()" >Scroll To Top </div>
+    </div>
+  </div>
+
 
 </ion-content>
