--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -52,6 +52,7 @@
     color: white;
     font-weight: bold;
     padding:4px;
+    box-shadow: 5px 5px 5px rgb(0,0,0,0.2);
 }
 
 .top_button, .down_button{
@@ -67,21 +68,7 @@
     padding:13px;
     padding-right: 50px;
     padding-left: 50px;
-
+    box-shadow: 5px 5px 5px rgb(0,0,0,0.2);
 }
 
-::-webkit-scrollbar {
-    width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: red; 
-    border-radius: 10px;
-  }
+
