--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -4,8 +4,8 @@
   <div class="Journalism">
     <div class="left_p">
       <!-- 这里面放图片 -->
-      <iframe width="170" height="100" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
-      </iframe>
+      <!-- <iframe width="170" height="100" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
+      </iframe> -->
     </div>
     <div class="right_p">
       <div class="title">Excerise 1</div>
@@ -19,8 +19,8 @@
   <div class="Journalism">
     <div class="left_p">
       <!-- 这里面放图片 -->
-      <iframe width="170" height="100" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
-      </iframe>
+      <!-- <iframe width="170" height="100" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
+      </iframe> -->
     </div>
     <div class="right_p">
       <div class="title">Excerise 2</div>
