--- a/src/app/calculate/calculate.component.scss
+++ b/src/app/calculate/calculate.component.scss
@@ -51,7 +51,8 @@
 }
 
 ion-input {
-    border: 0.5px solid !important;
+    border: 0.5px solid gray !important;
+    border-radius: 5px;
 }
 
 .elements {
