--- a/src/app/set-goal/set-goal.component.html
+++ b/src/app/set-goal/set-goal.component.html
@@ -16,7 +16,7 @@
     <div class="elements">
       <div class="title">Calorie Consumption</div>
       <ion-item lines="none" class="form-cal">
-        <ion-input class="inputClass" type="number" placeholder="Kcal" required></ion-input>
+        <ion-input class="inputClass" type="number" placeholder="kcal" required></ion-input>
       </ion-item>
     </div>
 
