--- a/src/app/set-goal/set-goal.component.scss
+++ b/src/app/set-goal/set-goal.component.scss
@@ -43,7 +43,8 @@
 }
 
 ion-input {
-    border: 0.5px solid !important;
+    border: 0.5px solid gray !important;
+    border-radius: 5px;
 }
 
 .elements {
