Implement frontend and backend for showing userinfo on dashboard.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,15 +3,14 @@
        <div class="body">
         <div class="header">
             <div class="h_png">
-                <!-- 这里面放图片 -->
-                <img src="../../assets/image/dashboard/Ellipse 3.svg" alt="" class="img">
+                <img src="{{userProfile.avatar}}" alt="" class="img">
             </div>
             <div class="ipt">
                 <input type="text" class="iipt">
             </div>
         </div>
         <!-- <br> -->
-        <h1 class="h1">HELLO , MONICA</h1>
+        <h1 class="h1">HELLO , {{userProfile.uname}}  </h1>
         <div class="ASYNC">
             <div class="Hhead">
               <h2>&emsp;LIVES WORKOUT</h2>
