--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="this.user_profileService.userForm" (ngSubmit)="onSubmit()">
 <app-bg></app-bg>
 <div class="signup">
     <div class="switch">
@@ -16,19 +16,19 @@
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/email_icon.svg">
             <ion-item>
-            <ion-input formControlName="email" type="text" placeholder="Email ID"></ion-input>
+            <ion-input formControlName="email" type="text" placeholder="Email ID" [(ngModel)]="this.user_profileService.userProfile.email"></ion-input>
             </ion-item>
         </div>
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/username_icon.svg">
             <ion-item>
-            <ion-input formControlName="uname" type="text" placeholder="Username"></ion-input>
+            <ion-input formControlName="uname" type="text" placeholder="Username" [(ngModel)]="this.user_profileService.userProfile.uname"></ion-input>
             </ion-item>
         </div>
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/password_icon.svg">
             <ion-item>
-            <ion-input formControlName="password" type="text" placeholder="Password"></ion-input>
+            <ion-input formControlName="passwd" type="text" placeholder="Password" [(ngModel)]="this.user_profileService.userProfile.passwd"></ion-input>
             </ion-item>
         </div>
     </div>
@@ -36,7 +36,7 @@
         <a [routerLink]="['/privacypolicy']" >Terms & Conditions</a> and <a [routerLink]="['/privacypolicy']">Privacy Policy</a>
     </div>
     <div class="firstpage_button">
-        <ion-button type="submit" class="firstpage_button1" fill="clear" [routerLink]="['/signup2']" >NEXT</ion-button>
+        <ion-button type="submit" class="firstpage_button1" fill="clear" [routerLink]="['/signup2']">NEXT</ion-button>
     </div>
 </div>
 </form>
