fix signup gender button

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
         <div class="forgot_password_button_inside" [routerLink]="['/verifyemail']" >Forgot Password?</div>
     </div>
     <div class="firstpage_button">
-        <div class="firstpage_button1" [routerLink]="['/']" >LOGIN</div>
+        <div class="firstpage_button1" [routerLink]="['/dashboard']" >LOGIN</div>
     </div>
     <div class="or_word">
         <hr width="25%">
